# TLC-Flask-Backend

./: .env.example  README.md  app.py  pyproject.toml
api/: __init__.py  config.py  create_app.py  extensions.py  middleware.py
api/models/: __init__.py  branches.py  branchstockcount.py  categories.py  inventoryitems.py  outlets.py  product_tags.py  products.py  recipes.py  suppliers.py  tags.py  users.py
api/routes/: __init__.py  auth.py  branch.py  branchstockcount.py  category.py  index.py  inventoryitem.py  outlet.py  product.py  recipe.py  supplier.py  tag.py
api/schemas/: branches.py  branchstockcount.py  categories.py  inventoryitems.py  outlets.py  products.py  recipes.py  suppliers.py  tags.py  users.py
api/seeds/: __init__.py  branches.py  branchstockcounts.py  categories.py  inventoryitems.py  outlets.py  products.py  recipes.py  suppliers.py  tags.py  users.py
api/services/: auth_service.py  branch_service.py  branchstockcount_service.py  category_service.py  inventoryitem_service.py  mongodb_service.py  outlet_service.py  product_service.py  recipe_service.py  supplier_service.py  tag_service.py
instance/: db.sqlite3
migrations/versions/: 00f80205e111_added_categories_table.py  3854f8205907_added_categories_table.py  449577f5ecb7_initial_migration.py  45694f9b9c67_added_recipe_table.py  4ab995113fa7_added_branch_stock_count_table.py  (+10 more)
tests/: test_auth.py  test_branch.py  test_branchstockcount.py  test_category.py  test_index.py  test_inventoryitem.py  test_outlet.py  test_product.py  test_recipe.py  test_supplier.py  test_tag.py
